--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 	<head>
 		<title>Miniport by HTML5 UP</title>
 		<meta charset="utf-8" />
@@ -29,13 +29,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="./static/images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="./static/images/bsod.png" alt="BSOD profile picture" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>ÉcranBleu</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>I am a seasoned professional translator currently looking to give a twist to my career by focusing on my second passion: IT.</br>
+								I am currently undergoing several trainings, including a Python training as well as a triple CompTIA A+ / Network+ / Security+ cursus.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -46,34 +47,38 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>My skills</h2>
+						<p>My language and IT backgrounds give me wide-reaching knowledge and a talent for flexibility.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Translation Services</h3>
+								<p>My 10+ years of experience as a translator allowed me to work on a variety of projects,
+									mostly centered on IT — but I also work on Marketing copies and Video Game texts.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon brands featured fa-python"></span>
+								<h3>Python Enthusiast</h3>
+								<p>Any IT enthusiast will end up learning a programming language. I chose Python because of
+									its (apparent) simplicity and modularity. Discover some of my projects below.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>IT Certifications</h3>
+								<p>Knowing IT is good, but you need the credentials to vouch for it.
+									That is why I am currently working on my
+									<a href="https://www.comptia.org/blog/introducing-comptia-stackable-certifications">CompTIA Secure Infrastructure Specialist</a> certification.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Do you want to know more?</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -83,8 +88,9 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>My recent work</h2>
+						<p>Like most translators, my NDAs prevent me from showing any translation work, but feel free to send me a test.</br>
+						This section showcases my personal Python projects.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -131,7 +137,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Have I sparked your curiosity?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -141,8 +147,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contact me</h2>
 					</header>
 					<div class="row">
 						<div class="col-12">
